src/test/ui/nll/issue-47388.stderr
error[E0594]: cannot assign to `fancy_ref.num` which is behind a `&` reference
  --> $DIR/issue-47388.rs:8:5
   |
LL |     let fancy_ref = &(&mut fancy);
   |                     ------------- help: consider changing this to be a mutable reference: `&mut (&mut fancy)`
LL |     fancy_ref.num = 6;
   |     ^^^^^^^^^^^^^^^^^ `fancy_ref` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

